--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -1,11 +1,9 @@
 version: "2"
 
 syncs:
-  d4d-unison-sync:
+  docker-sync-unison:
     src: './'
-    dest: '/var/www/html'
-    sync_args: '-prefer newer'
+    volumes:
+      - docker-sync-unison:/var/www/html
     sync_userid: '82'
-    sync_host_port: '10871'
-    sync_strategy: 'unison'
     sync_excludes: ['.gitignore', '.git/', '.idea/']
